fix(nixopts-search/navbar): Make it usable in dark mode

--- a/src/msearch.scss
+++ b/src/msearch.scss
@@ -39,7 +39,7 @@ table {
 }
 
 .navbar {
-  --bulma-navbar-burger-color: var(--bulma-body-color);
+  --bulma-navbar-burger-color: var(--bulma-navbar-item-color);
 }
 
 .modal-card-head {
